# brasil_prev

./: .coveragerc  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  alembic.ini  api.json  class_index.html  docker-compose.yml  function_index.html  index.html  pyproject.toml  pytest.ini  readme.md  status.json  z_0350fd47ce2e1194___init___py.html  z_10fae538ba4e8521_config_py.html  z_10fae538ba4e8521_main_py.html  z_25ae9fa05fa69a56_models_py.html  z_25ae9fa05fa69a56_repository_py.html  z_39061b5faf5d20b6_apis_py.html  z_39061b5faf5d20b6_models_py.html  z_39061b5faf5d20b6_repositories_py.html  z_39061b5faf5d20b6_schemas_py.html  z_39061b5faf5d20b6_services_py.html  z_4805b40442fe1873_apis_py.html  z_4805b40442fe1873_models_py.html  z_4805b40442fe1873_repositories_py.html  z_4805b40442fe1873_schemas_py.html  z_4805b40442fe1873_services_py.html  z_4cceeb30dc88f85b_repository_py.html  z_73caa26271c0d28d___init___py.html  z_82f43084cd71b6c9_types_py.html  z_9168253ce99d07b3___init___py.html  z_b7f29a6f0710e178_apis_py.html  z_b7f29a6f0710e178_models_py.html  z_b7f29a6f0710e178_repositories_py.html  z_b7f29a6f0710e178_schemas_py.html  z_b7f29a6f0710e178_services_py.html  (+1 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0de195d33d2d_create_produtos_table.py  40bdd35e8f2d_create_clientes_table.py
api/: config.py  main.py
api/cliente/: apis.py  models.py  repositories.py  schemas.py  services.py
api/plano/: apis.py  entities.py  models.py  repositories.py  schemas.py  services.py  types.py
api/produto/: apis.py  models.py  (+3 more)
tests/: conftest.py
(+41 files in other folders)
