[tool.poetry]
name = "test-brasil-prev"
version = "0.1.0"
description = "Teste técnico brasil prev"
authors = ["Lucas Gomes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
